
For Next Release
---------------
	- Add support for listing .new files without PAGER (David Woodfall)
	- Remove switch.ch mirrors
	- Add config option to allow *not* saving .orig configs (Darren Austin)
	- Mention possible stale mirror if CHECKSUMS.md5 gpg verify fails
	- Clarify that a press of "Enter" is needed to confirm kernel change
	  (Mario Preksavec)
	- doinst.sh Don't remove ChangeLog.txt upon upgrade/reinstall.
	  (Patrick Volkerding)
	- mirrors-x86*.sample: Remove bjtu.edu.cn mirror
	- Fix for /var/log/packages/ possibly being a symlink to elsewhere
	- Use CHECKSUMS.md5.asc to determine ChangeLog newness
	  (Patrick Volkerding)

Thu May 29 19:15:21 UTC 2018
---------------
	- 2.83.0
	- tweaks to build script

Wed Apr  4 07:14:01 UTC 2018
---------------
	- 2.83.0beta2
	- tweak handling of new kernel prompts
	- mandoc lint fixes

Wed Apr  4 01:06:05 UTC 2018
---------------
	- 2.83.0beta1 (yes, jump from 2.82.3betas)
	- fix stray stuff in vimdiff prompt
	- sort .new files list from looknew() (thanks to Eduard Rozenberg)
	- make sure user is aware of kernel update (require keypress)
	- respect $ROOT in looknew() (thanks to burdi01 on LQ)
	- inform user that the warning about a -current mirror
	  only occurs once, and also point the location of the
	  file to remove if they want the warning back
	- don't offer to run lilo if initrd is in lilo.conf

Sat Jan  6 23:54:27 UTC 2018
---------------
	- 2.82.3beta5
	- minor tweaks to slack-desc
	- check for existence of /etc/lilo.conf too before offering
	  to run lilo after kernel upgrades
	- make sure user actually wants to run lilo (fix answer
	  handling)
	- warn user and require confirmation the first time a -current
	  mirror is selected (thanks to Didier Spaier)
	- improve handling of SOURCE from /etc/slackpkg/mirrors; e.g.
	  don't fail if trailing slash is accidentally omitted
	  (thanks to Didier Spaier)

Fri Jan  5 03:24:31 UTC 2018
---------------
	- 2.82.3beta4